--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,22 +13,38 @@
         "--flavor",
         "development",
         "--target",
-        "lib/main_development.dart"
-      ]
+        "lib/main_development.dart",
+      ],
+      "codeLens": {
+        "for": [
+          "debug-file",
+        ],
+        "title": "Run dev"
+      }
     },
     {
       "name": "Launch staging",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_staging.dart",
-      "args": ["--flavor", "staging", "--target", "lib/main_staging.dart"]
+      "args": [
+        "--flavor",
+        "staging",
+        "--target",
+        "lib/main_staging.dart"
+      ]
     },
     {
       "name": "Launch production",
       "request": "launch",
       "type": "dart",
       "program": "lib/main_production.dart",
-      "args": ["--flavor", "production", "--target", "lib/main_production.dart"]
+      "args": [
+        "--flavor",
+        "production",
+        "--target",
+        "lib/main_production.dart"
+      ]
     }
   ]
 }
