--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,20 @@ environment:
 
 dependencies:
   bloc: 9.0.0
-  equatable: ^2.0.7
+  equatable: 2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: 9.0.0
   flutter_localizations:
     sdk: flutter
   intl: 0.19.0
-  shared_preferences: ^2.3.5
+  shared_preferences: 2.3.5
 
 dev_dependencies:
   bloc_test: 10.0.0
   flutter_test:
     sdk: flutter
+  melos: 6.3.2
   mocktail: 1.0.4
   very_good_analysis: 6.0.0
 
