--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: 9.0.0
+  carousel_slider: ^5.0.0
   equatable: 2.0.7
   flutter:
     sdk: flutter
@@ -15,6 +16,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: 0.19.0
+  property_api_client:
+    path: packages/property_api_client
+  property_repository:
+    path: packages/property_repository
   shared_preferences: 2.3.5
 
 dev_dependencies:
