--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   bloc_test: 10.0.0
   flutter_test:
     sdk: flutter
+  golden_toolkit: ^0.15.0
   melos: 6.3.2
   mocktail: 1.0.4
   very_good_analysis: 6.0.0
