--- a/melos.yaml
+++ b/melos.yaml
@@ -1,5 +1,8 @@
 name: resident_app
 
+melos: 
+  sdkPath: .fvm/flutter_sdk
+
 packages:
   - packages/**
   - lib/**
@@ -11,5 +14,6 @@ scripts:
     exec: dart run build_runner build --delete-conflicting-outputs
   get:
     exec: dart pub get
+    concurrency: 10
   setup:
      melos bootstrap && dart run build_runner build --delete-conflicting-outputs && dart analyze .
