--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   bloc: 9.0.0
-  carousel_slider: ^5.0.0
+  carousel_slider: 5.0.0
   equatable: 2.0.7
   flutter:
     sdk: flutter
@@ -34,3 +34,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/devices/
